k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $KUBERNETES_RESOURCE_NAME
  namespace: $KUBERNETES_NAMESPACE
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: $KUBERNETES_RESOURCE_NAME
